--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ torchvision = "^0.16.1"
 tqdm = "^4.66.1"
 pre-commit = "^3.5.0"
 dvc = {extras = ["gdrive"], version = "^3.33.3"}
+mypy = "^1.7.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
