--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ profile = "black"
 line_length = 100
 lines_after_imports = 2
 
+[tool.flake8]
+max-line-length = 100
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
