--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9"
 torch = "^2.1.1"
 torchvision = "^0.16.1"
 tqdm = "^4.66.1"
+hydra-core = "^1.3.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
@@ -20,6 +21,8 @@ pylint = "^3.0.2"
 pre-commit = "^3.5.0"
 dvc = {extras = ["gdrive"], version = "^3.33.3"}
 mypy = "^1.7.1"
+flake8-bugbear = "^23.12.2"
+flake8-pyproject = "^1.2.3"
 
 [tool.black]
 line-length = 100
