--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "mlops-hw-1"
+name = "animals_classifier"
 version = "0.1.0"
 description = ""
 authors = ["vslitvinov"]
@@ -12,6 +12,8 @@ torch = "^2.1.1"
 torchvision = "^0.16.1"
 tqdm = "^4.66.1"
 hydra-core = "^1.3.2"
+pandas = "^2.1.4"
+mlflow = "^2.9.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
@@ -25,16 +27,17 @@ flake8-bugbear = "^23.12.2"
 flake8-pyproject = "^1.2.3"
 
 [tool.black]
-line-length = 100
+line-length = 88
 target-version = ["py39"]
 
 [tool.isort]
 profile = "black"
-line_length = 100
+line_length = 88
 lines_after_imports = 2
 
 [tool.flake8]
-max-line-length = 100
+max-line-length = 88
+extend-ignore = "E203"
 
 [build-system]
 requires = ["poetry-core"]
