Splitted code, moved .dvc files to folders

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -6,3 +6,5 @@ num_workers: 4
 learning_rate: 0.001
 num_epochs: 5
 mlflow_tracking_uri: "http://128.0.1.1:8080"
+model_name: resnet18
+device: "cuda"
